--- a/configure.ac
+++ b/configure.ac
@@ -19,11 +19,19 @@
 
 AC_PREREQ(2.59)
 
-AC_INIT([Tools],[2.2.2017],[pwieser@trychlos.org],,[])
+AC_INIT([Tools],[2.3.2017],[pwieser@trychlos.org],ttp,[])
 
-AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+AC_CANONICAL_TARGET
+AM_INIT_AUTOMAKE
+
+# Code coverage
+AX_CODE_COVERAGE()
 
 AC_CONFIG_SRCDIR([tools/bin/ttp.sh])
+AC_CONFIG_MACRO_DIR([m4])
+
+AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
 
 AC_CONFIG_FILES([
 	Makefile
