Prepare next distribution

--- a/ansible/Makefile.am
+++ b/ansible/Makefile.am
@@ -15,30 +15,5 @@
 # along with The Tools Project; see the file COPYING. If not,
 # see <http://www.gnu.org/licenses/>.
 #
-# use: "autoreconf" to generate configure.
-
-AC_PREREQ(2.59)
-
-AC_INIT([Tools],[2.4-2021],[pwieser@trychlos.org],ttp,[])
-
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
-AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE
-
-# Code coverage
-AX_CODE_COVERAGE()
-
-AC_CONFIG_SRCDIR([tools/bin/ttp.sh])
-AC_CONFIG_MACRO_DIR([m4])
-
-AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
-
-AC_CONFIG_FILES([
-	Makefile
-	ansible/Makefile
-	docs/Makefile
-	maintainer/Makefile
-	tools/Makefile
-])
-
-AC_OUTPUT
+# Authors:
+#   Pierre Wieser <pwieser@trychlos.org>
