--- a/tools/etc/ttp/defaults.ini.sample
+++ b/tools/etc/ttp/defaults.ini.sample
@@ -29,7 +29,8 @@
 #    The first found wins.
 #
 # pwi 2013- 2-15 creation
-# pwi 2017- 6-21 publish the release at last 
+# pwi 2017- 6-21 publish the release at last
+# pwi 2021-10- 1 define TTP common group which owns 'logsroot'
 
 # logsroot:
 #   This key defines the root of the TTP logs directory.
@@ -42,3 +43,14 @@
 
 #logsroot : /an/absolute/path
 #logsroot : a_function_name [<maybe> [<with> [<args>]]]
+
+# ttpgroup:
+#   This key defines the TTP common group.
+#   The TTP common group in particular owns the TTP common logs dir root.
+#   Each user which aims to use the TTP tools must belong to this group.
+#   Hardcoded default value is 'ttp' though no garanty is given that each
+#   user actually belongs to this harcoded default group; this is a task
+#   which must be planified at installation time.
+#   Note that this key exhibits a site-wide value; no override is permitted.
+
+#ttpgroup : ttp
